<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="kr.hs.dgsw.juyeop.interview.viewmodel.activity.MyQuestionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".view.activity.MyQuestionActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_tab"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabGravity="fill"
                    app:tabIndicatorColor="@android:color/black"
                    app:tabIndicatorHeight="3dp"
                    app:tabMode="scrollable"
                    app:tabSelectedTextColor="@android:color/black"
                    app:tabTextAppearance="@style/tabQuestionTheme"
                    app:tabTextColor="@color/colorStrongGray">

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_question_first" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_question_second" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_question_third" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_question_fourth" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_question_fifth" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_question_sixth" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tab_question_seventh" />
                </com.google.android.material.tabs.TabLayout>
            </FrameLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/backgroundCardView"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/colorAccent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    // string, color 관리하는 김에 value 폴더에 dimen 파일도 만들어서
                    // textSize도 관리해주면 좋을 것 같아요
                    <TextView
                        android:id="@+id/questionInfoTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:fontFamily="@font/bold"
                        android:textColor="@android:color/white"
                        android:layout_weight="1"
                        android:layout_marginStart="25dp"
                        tools:text="이전에 이미 답변한\n비전/목표 관련 면접 질문 수"/>

                    <com.robinhood.ticker.TickerView
                        android:id="@+id/questionCountTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginEnd="25dp"
                        app:ticker_animationDuration="500"
                        tools:text="18개"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                app:adapter="@{viewModel.questionItemAdapter}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_question" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>