<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="kr.hs.dgsw.juyeop.interview.viewmodel.activity.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_background"
        tools:context=".view.activity.SignInActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name2"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:fontFamily="@font/bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="아이디"
                        android:text="@={viewModel.id}"
                        android:textSize="15sp"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/regular"
                        tools:ignore="HardcodedText" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="비밀번호"
                        android:text="@={viewModel.pw}"
                        android:textSize="15sp"
                        android:textColor="@android:color/black"
                        android:inputType="textPassword"
                        android:fontFamily="@font/regular"
                        tools:ignore="HardcodedText" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_button"
                android:text="@string/text_sign_in"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:fontFamily="@font/regular"
                android:layout_marginTop="25dp"
                android:onClick="@{() -> viewModel.signInEvent()}"/>
        </LinearLayout>

        // 개인적인 의견인데 연두색에 하얀색이고, 크기도 작은 것 같아서 눈에 잘 띄지 않을 것 같은데
        // textSize를 더 키우면 좋을 것 같아요
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/text_sign_up"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="25dp"
            android:onClick="@{() -> viewModel.signUpEvent()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"/>

        <ImageView
            android:layout_width="170dp"
            android:layout_height="250dp"
            android:src="@drawable/ic_people1"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription,MissingConstraints"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>