<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="kr.hs.dgsw.juyeop.interview.viewmodel.fragment.MyInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_my_info"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:fontFamily="@font/bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@={viewModel.name}"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:fontFamily="@font/bold"
                android:layout_marginTop="30dp"
                tools:text="김주엽"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorStrongGray"
                android:text="@string/text_my_info_change"
                android:textSize="15sp"
                android:fontFamily="@font/bold"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_my_solution_count"
                    android:textSize="15sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@android:color/black"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.solutionCount}"
                    android:textSize="15sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@android:color/black"
                    tools:text="80개"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorStrongGray"
                android:layout_marginTop="10dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_my_solution_check"
                    android:textSize="15sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@android:color/black"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow"
                    android:tint="@android:color/black"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorStrongGray"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="170dp"
            android:layout_height="250dp"
            android:src="@drawable/ic_people2"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription,MissingConstraints"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>